Add styling to header input

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ html{
 
 body{
   font-family: 'Roboto Slab', serif;
-  background-color: #090a0e;
+  background-color: #121212;
   color: #ffffff;
 }
 .max-content{
